--- a/list.html
+++ b/list.html
@@ -27,7 +27,7 @@ a:hover{color: #f2d7d7;}
 </style>
 </head>
 <body>
-<h1>Conversion Master's Programmes </h1>
+<h1>Conversion Master's Programmes (UK) </h1>
 <section id="main-body">
 <p>The programmes in this list are fully online (except for the last 2 where mentioned)</p>
 
@@ -38,12 +38,12 @@ a:hover{color: #f2d7d7;}
 <p><a href="https://online.york.ac.uk/study-online/msc-computer-science-with-cyber-security-online/" target="_blank">MSc Computer Science with Cyber Security</a></p>
 <p><a href="https://online.york.ac.uk/study-online/msc-computer-science-with-artificial-intelligence-online/"target="_blank">MSc Computer Science with Artificial Intelligence</a></p>
 
-<h2>University of Bath </h2>
+<h2>University of Bath</h2>
 
 <p><a href="https://online.bath.ac.uk/online-courses/msc-computer-science" target="_blank">MSc Computer Science</a></p>
 <p><a href="https://online.bath.ac.uk/online-courses/msc-artificial-intelligence?cmgfrm=https%3A%2F%2Fwww.google.com%2F" target="_blank">MSc Artificial intelligence</a></p>
 
-<h2>University of Essex </h2>
+<h2>University of Essex</h2>
 
 <p><a href="https://online.essex.ac.uk/courses/msc-computer-science/#overview" target="_blank">MSc Computer Science</a></p>
 <p><a href="https://online.essex.ac.uk/courses/msc-artificial-intelligence/" target="_blank">MSc Artificial intelligence</a></p>
