--- a/list.html
+++ b/list.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Outfit&display=swap" rel="stylesheet">
 <style>
 body{font-family: 'Montserrat', sans-serif;
-background-image: url(/background-repeat\ no-repeat\,\ repeat;.png);
+background-image: url(background-repeat\ no-repeat\,\ repeat;.png);
 color: #fffff9;}
 h1{text-align:center;
 color: #b84c65;}
