--- a/list.html
+++ b/list.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Outfit&display=swap" rel="stylesheet">
 <style>
 body{font-family: 'Montserrat', sans-serif;
-background-image: url(Images/bcc.png);
+background-color: #f79489;
 color: #fffff9;}
 h1{text-align:center;
 color: #b84c65;}
@@ -21,8 +21,7 @@ a{text-decoration:none;
 color:#fffff9}
 a:hover{color: #f2d7d7;}
 #main-body{
-    margin-left:2%;
-}
+    margin-left:2%;}
 
 </style>
 </head>
